页面初始化完成

--- a/online-mall-web/src/main/resources/static/html/test.html
+++ b/online-mall-web/src/main/resources/static/html/test.html
@@ -1,3 +1,5 @@
 <div id="normalLogin" class="main section">
-    <h3>测试页，恭喜启动成功~</h3>
+    <button type="button" class="btn btn-default btn-lg">
+        <span class="glyphicon glyphicon-user"></span>
+    </button>
 </div>
