--- a/online-mall-web/src/main/resources/static/html/test.html
+++ b/online-mall-web/src/main/resources/static/html/test.html
@@ -1,5 +1,31 @@
-<div id="normalLogin" class="main section">
-    <button type="button" class="btn btn-default btn-lg">
-        <span class="glyphicon glyphicon-user"></span>
-    </button>
+<div class="jumbotron">
+    <div class="container text-center">
+        <div style="padding: 100px 100px 10px;">
+            <form class="bs-example bs-example-form" role="form">
+                <div class="input-group">
+                                <span class="input-group-addon">
+                                    <span class="glyphicon glyphicon-user"></span>
+                                </span>
+                    <input type="text" class="form-control" placeholder="登录名">
+                </div>
+                <br>
+                <div class="input-group">
+                                <span class="input-group-addon">
+                                    <span class="glyphicon glyphicon-lock"></span>
+                                </span>
+                    <input type="password" class="form-control" placeholder="密码">
+                </div>
+                <br>
+                <div class="bs-example">
+                    <button type="button" class="btn btn-primary col-md-6"
+                            data-loading-text="Loading...">注册
+                    </button>
+
+                    <button type="button" class="btn btn-primary col-md-6"
+                            data-loading-text="Loading...">登陆
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
 </div>
