--- a/online-mall-web/src/main/resources/static/html/test.html
+++ b/online-mall-web/src/main/resources/static/html/test.html
@@ -1,31 +1,34 @@
-<div class="jumbotron">
-    <div class="container text-center">
-        <div style="padding: 100px 100px 10px;">
-            <form class="bs-example bs-example-form" role="form">
-                <div class="input-group">
+<div class="container text-center wrap1">
+    <div class="col-sm-8 col-md-5 center-auto pd-sm-50 pd-xs-20 main_content">
+        <p class="text-center font16">登录</p>
+        <form>
+            <!--
+            <div class="form-group mg-t20">
+                <i class="icon_font glyphicon glyphicon-user"></i>
+                <input type="email" class="login_input" id="Email1" placeholder="请输入用户名" />
+            </div>
+            -->
+            <div class="input-group mg-t20">
                                 <span class="input-group-addon">
                                     <span class="glyphicon glyphicon-user"></span>
                                 </span>
-                    <input type="text" class="form-control" placeholder="登录名">
-                </div>
-                <br>
-                <div class="input-group">
+                <input type="text" class="form-control" placeholder="登录名">
+            </div>
+            <div class="input-group mg-t20">
                                 <span class="input-group-addon">
                                     <span class="glyphicon glyphicon-lock"></span>
                                 </span>
-                    <input type="password" class="form-control" placeholder="密码">
-                </div>
-                <br>
-                <div class="bs-example">
-                    <button type="button" class="btn btn-primary col-md-6"
-                            data-loading-text="Loading...">注册
-                    </button>
-
-                    <button type="button" class="btn btn-primary col-md-6"
-                            data-loading-text="Loading...">登陆
-                    </button>
-                </div>
-            </form>
-        </div>
+                <input type="password" class="form-control" placeholder="密码">
+            </div>
+            <div class="checkbox mg-b25">
+                <label>
+                    <input type="checkbox"/>记住我的登录信息
+                </label>
+            </div>
+            <button class="login_btn">登 录</button>
+        </form>
     </div>
 </div>
+
+
+
