--- a/online-mall-web/src/main/resources/static/html/login/index.html
+++ b/online-mall-web/src/main/resources/static/html/login/index.html
@@ -21,7 +21,7 @@
             </div>
             <button class="login_btn">登 录</button>
             <div class="mg-t20">
-                <a ng-click="">注册</a><a class="mg-left20" ng-click="">忘记密码</a>
+                <a ui-sref="reister">注册</a><a class="mg-left20" ng-click="">忘记密码</a>
             </div>
         </form>
     </div>
